--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "fish-heart-owl",
+  "homepage": "https://ksdc-grantw.github.io/fish-heart-owl",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,9 +14,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
